style:layout issue on android chrome

--- a/Frontend/src/styles/dialogs.scss
+++ b/Frontend/src/styles/dialogs.scss
@@ -68,6 +68,7 @@
 .card-title{
   word-break: break-all;
   max-height: 48px;
+  align-items: start;
   overflow: hidden;
   @include unselectableText();
 }
